--- a/app.css
+++ b/app.css
@@ -17,12 +17,34 @@ h1 {
   /* flex-direction column or row specifies main axis... column-reverse or row-reverse will change the starting point of main axis to the opposite side of default  */
   /* justify-content: flex-start; */
   /* justify-content flex-end pushes it to end of main axis, still left to right */
-  justify-content: space-between;
+  justify-content: center;
   /* justify-content: space-between divides up the free available space btw elements, space-around will divide it on each side of each element */
-  /* space-evenly ensures the space to be even btw elements and btw elements and container */
+  /* space-evenly ensures the space to be even btw elements and btw elements and container ....justify-content is dependent upon flex-direction*/
+
+  flex-wrap: wrap;
+  /* flex-wrap: wrap, no wrap, and wrap-reverse will dictate the direction of the cross axis and direction it will wrap if applicable */
+
+  align-items: flex-start;
+  /* align items to either beginning or end or center of the cross axis*/
+
+  /* align-content: space-between; */
+  /* controls the space between elements after wrapping...it does nothing with no flex-wrapping*/
 }
 
 #container div {
   width: 200px;
   height: 200px;
+  text-align: center;
 }
+/* 
+div:nth-of-type(3) {
+  align-self: flex-end;
+}
+
+div:nth-of-type(2) {
+  align-self: center;
+} */
+
+/* div:nth-of-type(5) {
+  align-self: left;
+} */
