--- a/app.css
+++ b/app.css
@@ -58,3 +58,22 @@ div:nth-of-type(3) {
 div:nth-of-type(2) {
   align-self: center;
 } */
+
+main {
+  width: 80%;
+  margin: 0 auto;
+  border: 5px solid black;
+  height: 500px;
+  display: flex;
+}
+
+main .sidebar {
+  background-color: purple;
+  border: 2px solid white;
+  flex: 1 2 300px;
+}
+
+main .maincontent {
+  background-color: lightgreen;
+  flex: 2 600px;
+}
